@startuml

title __SERVER's Class Diagram__\n

  namespace server {
    class server.Game {
        - clientShout : String
        - comeback : String
        - gameBool : boolean
        - insult : String
        - key1 : boolean
        - key2 : boolean
        - log : BufferedWriter
        - opcode1 : int
        - opcode2 : int
        - serverShout : String
        - turn : boolean
        + Game()
        + multiPlayer()
        + run()
        + singlePlayer()
    }
  }
  

  namespace server {
    class server.Server {
        {static} ~ HELP : String
        {static} ~ WRONG_PARAMETERS : String
        {static} ~ WRONG_PARAMETERS_USE : String
        {static} + main()
        {static} - multiPlayer()
        {static} - singlePlayer()
    }
  }
  

  namespace server {
    class server.ServerThread {
        + ServerThread()
        + run()
    }
  }
  

  server.Game .right.|> shared.functions.Functions
  server.Game o-- shared.model.Player : client
  server.Game o-- shared.model.Player : client2
  server.Game o-- shared.database.Database : database
  server.Game o-- utils.Datagram : datagram1
  server.Game o-- utils.Datagram : datagram2
  server.Game o-- shared.model.DatabaseProvider : dp
  server.Game o-- shared.model.Player : server
  server.ServerThread .up.|> java.lang.Runnable
  server.ServerThread o-- server.Game : game


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
